# UniNAS

./: README.md  model_string.txt  pyproject.toml  test.py
examples/: model_coatnet.json  model_resnet.json  test.py
model_examples/: model_efficientnet.json  model_transformer.json
uninas/: model.py  search.py
uninas.egg-info/: PKG-INFO  SOURCES.txt
uninas/nodes/: __init__.py  base.py  batchnorm.py  conv1.py  conv3.py  convdepth3.py  convdepth5.py  dropout.py  gelu.py  identity.py  layernorm.py  mask.py  maxpool.py  relposbias.py  sigmoid.py  softmax.py  special.py  utils.py  zero.py
