[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uninas"
version = "1.0.0"
description = "initial working version for a random walk and model <> string conversions"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Ondrej Tybl", email = "ondra@tybl.cz"}
]
dependencies = [
    "torch>=2.9.1",  # adjust version if needed
    "timm>=1.0.24"    # adjust version if needed
]