[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uninas"
version = "1.3.0"
description = "model <> string conversions with json"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Ondrej Tybl", email = "ondra@tybl.cz"}
]
dependencies = [
    "torch>=2.9.1",
    "timm>=1.0.24"
]

# Include non-Python files like examples
[tool.setuptools.package-data]
"uninas" = ["py.typed"]  # if you have type hints

[tool.setuptools.exclude-package-data]
"*" = ["examples/*"]  # exclude examples from being treated as packages